# Hubio

./: LICENSE  README.md
app/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts
app/src/: app.css  app.html  app.postcss
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  main.json  migrated.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: mod.rs  projects.rs
app/src-tauri/src/models/: mod.rs  projects.rs
app/src-tauri/src/project/: mod.rs  project.rs  project_info.rs
app/src-tauri/src/projects/: projects.rs
app/src-tauri/src/setup/: directories.rs  mod.rs  window.rs
app/src-tauri/src/setup/cli/: cli.rs
app/src-tauri/src/setup/cli/commands/: project.rs
app/src/lib/: index.ts
app/src/lib/components/projects/: NewProjectCard.svelte  ProjectCard.svelte
app/src/lib/modals/: NewProjectModal.svelte
app/src/lib/project/: NewProjectCard.svelte  ProjectCard.svelte  i_project_info.ts  types.ts
app/src/lib/types/projects/: project.ts
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/project/: +page.svelte  +page.ts
app/src/routes/project/[name]/: +page.svelte  +page.ts
app/src/routes/projects/: +page.svelte  +page.ts
