[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[package]
name = "hubio"
version = "0.1.0"
description = "Hubio is a centralized hub for connecting, extending and customizing your software ecosystem. With Hubio, you can easily integrate mini-applications, develop new functionalities, and create unique user experiences, all in a flexible and powerful environment."
authors = ["Maxence Cosaque"]
license = "GPL-3.0 license"
repository = "https://github.com/Maxanox/Hubio"
default-run = "hubio"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }
window-vibrancy = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
