[package]
name = "app"
version = "0.10.0"
description = "A Tauri App"
authors = ["Maxence Cosaque (github.com/Maxanox27)"]
license = "MIT"
repository = "https://github.com/HubioLabs/Hubio"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.0", features = [] }
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-structure-manager = "0.3.8"
window-vibrancy = "0.5.0"
tauri-plugin-log = "2.0.0-rc.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
